# nexum_backend

./: .replit  agent_retrieval.py  analysis_module_0_plan.py  analysis_module_1_orchestrator.py  analysis_module_2_vectordb.py  analysis_module_2_web.py  analysis_module_3_single.py  api_service.py  env_setup.py  import_pipeline.py  main.py  pinecone_adjustments.py  prompt_builder.md  prompt_builder.py  pyproject.toml  replit_zip_error_log (1).txt  replit_zip_error_log.txt  requirements.txt  test_chunking.py  test_orchestrator.py  test_tracing.py
.upm/: store.json
10k_import_pipeline/: import_0_search.py  import_1_parse.py  import_2_chunking.py  import_3_indexing.py  import_pipeline.py
analysis_plans/: analysis_plan_Amazon_20250108_145453.md  analysis_plan_Amazon_20250109_141405.md  analysis_plan_Amazon_20250109_141731.md  analysis_plan_NVIDIA_20250109_141807.md
attached_assets/: Pasted-Access-to-fetch-at-https-a68f36bf-ada4-4a0f-ae49-a7fc88d3e949-00-2r06l51igi0p6-worf-replit-dev-30-1736879281747.txt
components/: NotebookSection.tsx
docs/: 10K example Netflix.md  Firecrawl 10-K Document Retrieval 3.md  Groq - Full Documentation.md  agent_analysis_initial.py
docs/APIs/: firecrawl_doc.md  (+6 more)
logs/: orchestrator_report_nvidia_20250109_170236.md  orchestrator_report_nvidia_20250109_204715.md  orchestrator_report_nvidia_20250109_204826.md  orchestrator_report_nvidia_20250109_205035.md  orchestrator_report_nvidia_20250109_205214.md  orchestrator_report_nvidia_20250109_205343.md  orchestrator_report_nvidia_20250109_205520.md  orchestrator_report_nvidia_20250109_205941.md  (+16 more)
(+36 files in other folders)
